# squill

./: .env  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  Dockerfile  GOOGLE_OAUTH_SETUP.md  Makefile  README.md  clean-canvas.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
.claude/skills/: add-database.md  manage-box.md
backend/: .env.example  Caddyfile  Cargo.toml  Dockerfile  README.md  config.py  database.py  entrypoint.sh  fixit.py  main.py  mcp_server.py  models.py  pyproject.toml  schema.sql  test.py
backend/alembic/: env.py
backend/alembic/versions/: 028cfa655ad1_add_first_name_and_last_name_to_users.py  5714a78b95b0_initial.py  a1b2c3d4e5f6_add_vip_column.py  b2c3d4e5f6g7_drop_connections_table.py  c3d4e5f6g7h8_add_snowflake_connections.py  d4e5f6g7h8i9_rename_paddle_to_polar.py  e5f6g7h8i9j0_add_cancel_at_period_end.py  f6g7h8i9j0k1_add_canvas_and_shares.py  g7h8i9j0k1l2_add_clickhouse_connections.py  h8i9j0k1l2m3_add_mysql_connections.py  i9j0k1l2m3n4_add_boxes_and_canvas_updates.py
backend/migrations/: 0001_baseline.sql  0002_revoked_tokens.sql  0003_oauth.sql
backend/routers/: ai.py  auth.py  bigquery.py  billing.py  canvas.py  chat.py  clickhouse.py  connections.py  hex_remover.py  mysql.py  postgres.py  snowflake.py  spell_caster.py  user.py  wizard.py  ws.py
backend/scripts/: benchmark_fixer.py  list_users.py
backend/scripts/benchmark_scenarios/: having_without_group_by_postgres.yaml  missing_comma_postgres.yaml  null_comparison_postgres.yaml  permission_error_postgres.yaml  typo_function_name_bigquery.yaml  typo_join_keyword_snowflake.yaml  unclosed_parenthesis_bigquery.yaml  wrong_string_quotes_postgres.yaml
backend/scripts/benchmarks/: common.py  hex_remover.py  spell_caster.py
backend/scripts/benchmarks/hex_remover_scenarios/: cte_missing_paren_duckdb.yaml  date_interval_bigquery.yaml  missing_group_by_bigquery.yaml  missing_group_by_with_having.yaml  misspelled_keyword_duckdb.yaml
backend/scripts/benchmarks/spell_caster_scenarios/: add_cte_postgres.yaml  add_group_by_bigquery.yaml  add_limit_postgres.yaml  add_order_by_duckdb.yaml  add_where_clause_postgres.yaml  change_join_type_postgres.yaml  rename_column_alias_bigquery.yaml  replace_project_bigquery.yaml
backend/services/: ai_agent.py  ai_fixer.py  auth.py  clickhouse_pool.py  encryption.py  github_oauth.py  google_oauth.py  hex_remover.py  mcp_oauth.py  microsoft_oauth.py  mysql_pool.py  postgres_pool.py  snowflake_pool.py  spell_caster.py  wizard.py  ws_manager.py
backend/src/: config.rs  db.rs  encryption.rs  error.rs  helpers.rs  lib.rs  main.rs  rate_limit.rs  token_revocation.rs
backend/src/auth/: jwt.rs  middleware.rs
backend/src/routes/: ai.rs  auth.rs  billing.rs  canvas.rs  clickhouse.rs  connections.rs  health.rs  mcp.rs  mcp_oauth.rs  mod.rs  snowflake.rs  test_helpers.rs  user.rs  ws.rs
backend/src/services/: mod.rs  oauth.rs  openai.rs  ws_manager.rs
backend/tests/: conftest.py  test_auth.py  test_cors.py  test_encryption.py  test_mcp.py  test_snowflake_utils.py
frontend/: .env.example  Caddyfile  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: cli_executor.rs  lib.rs  main.rs  oauth.rs  secure_store.rs
hocuspocus/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
src/: App.vue  main.ts  router.js  router.ts  style.css  vite-env.d.ts
(+236 files in other folders)
