[package]
name = "squill-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
hyper = "1"
http = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
dotenvy = "0.15"

# Auth
jsonwebtoken = "9"
aes-gcm = "0.10"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Crypto
rand = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Async stream utilities (WebSocket split)
futures-util = "0.3"

# Error handling
anyhow = "1"
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-streamable-http-server"] }
tokio-util = "0.7"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
