[package]
name = "squill"
version = "0.1.0"
edition = "2021"
description = "Squill Desktop — local-first SQL workbench"

[lib]
name = "squill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
tokio = { version = "1", features = ["net", "io-util", "time"] }
open = "5"
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"

[profile.release]
lto = "thin"
strip = true
codegen-units = 16
